--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -3,14 +3,11 @@ name: 👩‍💻 DEV - CI
 on:
   workflow_dispatch:
 
-env:
-  ENV: dev
-
 jobs:
   unit-tests:
     name: 🧪 Unit Tests
     runs-on: ubuntu-latest
-    environment: ${{ env.ENV }}
+    environment: dev
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
@@ -21,35 +18,35 @@ jobs:
   terraform-plan:
     name: 📐 Terraform Plan
     runs-on: ubuntu-latest
-    environment: ${{ env.ENV }}
+    environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
       ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
       # TF_LOG: "TRACE"
-      TF_VAR_env: ${{ env.ENV }}
+      TF_VAR_env: dev
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
         uses: ./.github/actions/terraform-plan
         with:
-          workingDirectory: infrastructure/environments/${{ env.ENV }}
+          workingDirectory: infrastructure/environments/dev
 
 
   terraform-apply:
     name: 🏗️ Deploy Infrastructure
     runs-on: ubuntu-latest
     needs: [unit-tests, terraform-plan]
-    environment: ${{ env.ENV }}
+    environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
       ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
       # TF_LOG: "TRACE"
-      TF_VAR_env: ${{ env.ENV }}
+      TF_VAR_env: dev
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
     steps:
@@ -58,13 +55,13 @@ jobs:
       - name: Run Terraform
         uses: ./.github/actions/terraform-apply
         with:
-          workingDirectory: infrastructure/environments/${{ env.ENV }}
+          workingDirectory: infrastructure/environments/dev
 
   deploy-api:
     name: 🚀 Deploy API
     runs-on: ubuntu-latest
     needs: terraform-apply
-    environment: ${{ env.ENV }}
+    environment: dev
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/deploy
@@ -77,14 +74,14 @@ jobs:
           loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
           commitHash: ${{ github.sha }}
           publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          appName: ${{ env.ENV }}lolscoutwa01
+          appName: devlolscoutwa01
           imageName: lol-scout-api
 
   deploy-web:
     name: 🚀 Deploy Web
     runs-on: ubuntu-latest
     needs: terraform-apply
-    environment: ${{ env.ENV }}
+    environment: dev
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/deploy
@@ -97,7 +94,7 @@ jobs:
           loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
           commitHash: ${{ github.sha }}
           publishProfile: ${{ secrets.WEB_AZURE_PUBLISH_PROFILE }}
-          appName: ${{ env.ENV }}lolscoutwa02
+          appName: devlolscoutwa02
           imageName: lol-scout-web
 
 
