--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -1,12 +1,11 @@
-name: DEV - CI
+name: 👩‍💻 DEV - CI
 
 on:
   workflow_dispatch:
-    
 
 jobs:
   unit-tests:
-    name: Run Unit Tests
+    name: 🧪 Unit Tests
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -15,9 +14,9 @@ jobs:
         uses: ./.github/actions/test
         with:
           workingDirectory: api
-  
+
   terraform-plan:
-    name: Run Terraform Plan
+    name: 📐 Terraform Plan
     runs-on: ubuntu-latest
     environment: dev
     env:
@@ -37,7 +36,7 @@ jobs:
 
 
   terraform-apply:
-    name: Deploy Infrastructure
+    name: 🏗️ Deploy Infrastructure
     runs-on: ubuntu-latest
     needs: [unit-tests, terraform-plan]
     environment: dev
@@ -59,7 +58,7 @@ jobs:
           workingDirectory: infrastructure/environments/dev
 
   deploy-api:
-    name: Deploy API
+    name: 🚀 Deploy API
     runs-on: ubuntu-latest
     needs: terraform-apply
     environment: dev
@@ -77,5 +76,25 @@ jobs:
           publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           appName: devlolscoutwa01
           imageName: lol-scout-api
+
+  deploy-web:
+    name: 🚀 Deploy Web
+    runs-on: ubuntu-latest
+    needs: terraform-apply
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy
+        with:
+          workingDirectory: web
+          clientId: ${{secrets.AZURE_CLIENT_ID}}
+          clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
+          subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenantId: ${{secrets.AZURE_TENANT_ID}}
+          loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          commitHash: ${{ github.sha }}
+          publishProfile: ${{ secrets.WEB_AZURE_PUBLISH_PROFILE }}
+          appName: devlolscoutwa02
+          imageName: lol-scout-web
 
 
