add missing emoji, fix description

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -21,7 +21,7 @@ jobs:
           workingDirectory: api
   
   terraform-plan:
-    name: Run Terraform Plan
+    name: 📐 Terraform Plan
     runs-on: ubuntu-latest
     environment: test
     env:
@@ -34,7 +34,7 @@ jobs:
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
     steps:
       - uses: actions/checkout@v3
-      - name: Run Tests
+      - name: Run Terraform Plan
         uses: ./.github/actions/terraform-plan
         with:
           workingDirectory: infrastructure/environments/test
