remove unused action, uncomment stuff

--- a/.github/actions/terraform-plan/action.yml
+++ b/.github/actions/terraform-plan/action.yml
@@ -1,5 +1,5 @@
-name: Terraform
-description: create the infrastructure.
+name: Terraform Plan
+description: Run Terraform Plan
 
 inputs:
   workingDirectory:
