--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -4,16 +4,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  # unit-tests:
-  #   name: 🧪 Unit Tests
-  #   runs-on: ubuntu-latest
-  #   environment: dev
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Run Tests
-  #       uses: ./.github/actions/test
-  #       with:
-  #         workingDirectory: api
+  unit-tests:
+    name: 🧪 Unit Tests
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/actions/test
+        with:
+          workingDirectory: api
 
   terraform-plan:
     name: 📐 Terraform Plan
@@ -35,66 +35,66 @@ jobs:
           workingDirectory: infrastructure/environments/dev
 
 
-  # terraform-apply:
-  #   name: 🏗️ Deploy Infrastructure
-  #   runs-on: ubuntu-latest
-  #   needs: [unit-tests, terraform-plan]
-  #   environment: dev
-  #   env:
-  #     ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
-  #     ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
-  #     ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-  #     ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-  #     # TF_LOG: "TRACE"
-  #     TF_VAR_env: dev
-  #     TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
+  terraform-apply:
+    name: 🏗️ Deploy Infrastructure
+    runs-on: ubuntu-latest
+    needs: [unit-tests, terraform-plan]
+    environment: dev
+    env:
+      ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      # TF_LOG: "TRACE"
+      TF_VAR_env: dev
+      TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Run Terraform
-  #       uses: ./.github/actions/terraform-apply
-  #       with:
-  #         workingDirectory: infrastructure/environments/dev
+      - name: Run Terraform
+        uses: ./.github/actions/terraform-apply
+        with:
+          workingDirectory: infrastructure/environments/dev
 
-  # deploy-api:
-  #   name: 🚀 Deploy API
-  #   runs-on: ubuntu-latest
-  #   needs: terraform-apply
-  #   environment: dev
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: ./.github/actions/deploy
-  #       with:
-  #         workingDirectory: api
-  #         clientId: ${{secrets.AZURE_CLIENT_ID}}
-  #         clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
-  #         subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-  #         tenantId: ${{secrets.AZURE_TENANT_ID}}
-  #         loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
-  #         commitHash: ${{ github.sha }}
-  #         publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-  #         appName: devlolscoutwa01
-  #         imageName: lol-scout-api
+  deploy-api:
+    name: 🚀 Deploy API
+    runs-on: ubuntu-latest
+    needs: terraform-apply
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy
+        with:
+          workingDirectory: api
+          clientId: ${{secrets.AZURE_CLIENT_ID}}
+          clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
+          subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenantId: ${{secrets.AZURE_TENANT_ID}}
+          loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          commitHash: ${{ github.sha }}
+          publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          appName: devlolscoutwa01
+          imageName: lol-scout-api
 
-  # deploy-web:
-  #   name: 🚀 Deploy Web
-  #   runs-on: ubuntu-latest
-  #   needs: terraform-apply
-  #   environment: dev
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: ./.github/actions/deploy
-  #       with:
-  #         workingDirectory: web
-  #         clientId: ${{secrets.AZURE_CLIENT_ID}}
-  #         clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
-  #         subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-  #         tenantId: ${{secrets.AZURE_TENANT_ID}}
-  #         loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
-  #         commitHash: ${{ github.sha }}
-  #         publishProfile: ${{ secrets.WEB_AZURE_PUBLISH_PROFILE }}
-  #         appName: devlolscoutwa02
-  #         imageName: lol-scout-web
+  deploy-web:
+    name: 🚀 Deploy Web
+    runs-on: ubuntu-latest
+    needs: terraform-apply
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy
+        with:
+          workingDirectory: web
+          clientId: ${{secrets.AZURE_CLIENT_ID}}
+          clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
+          subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenantId: ${{secrets.AZURE_TENANT_ID}}
+          loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          commitHash: ${{ github.sha }}
+          publishProfile: ${{ secrets.WEB_AZURE_PUBLISH_PROFILE }}
+          appName: devlolscoutwa02
+          imageName: lol-scout-web
 
 
