--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  unit-tests:
-    name: 🧪 Unit Tests
+  tests:
+    name: 🧪 Tests
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -38,7 +38,7 @@ jobs:
   terraform-apply:
     name: 🏗️ Deploy Infrastructure
     runs-on: ubuntu-latest
-    needs: [unit-tests, terraform-plan]
+    needs: [tests, terraform-plan]
     environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
