--- a/.github/workflows/web-test/action.yml
+++ b/.github/workflows/web-test/action.yml
@@ -1,4 +1,4 @@
-name: 🌐🧪 API Tests
+name: 🕸️🧪 Web Tests
 description: Run Tests
 
 inputs:
@@ -11,15 +11,20 @@ runs:
   steps:
   - name: Install Packages
     shell: bash
-    run : npm install
+    run : yarn install
     working-directory: ${{ inputs.workingDirectory }}
 
-  - name: Lint
-    shell: bash
-    run: npm run lint
-    working-directory: ${{ inputs.workingDirectory }}
+  # - name: Lint
+  #   shell: bash
+  #   run: yarn run lint
+  #   working-directory: ${{ inputs.workingDirectory }}
 
-  - name: Unit Test
+  # - name: Unit Test
+  #   shell: bash
+  #   run: yarn test
+  #   working-directory: ${{ inputs.workingDirectory }}
+
+  - name: Build
     shell: bash
-    run: npm test
+    run: yarn build
     working-directory: ${{ inputs.workingDirectory }}
