--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -4,16 +4,22 @@ on:
   workflow_dispatch:
 
 jobs:
-  unit-tests:
-    name: 🧪 Unit Tests
+  tests:
+    name: 🧪 Tests
     runs-on: ubuntu-latest
     environment: dev
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
-        uses: ./.github/actions/test
+        uses: ./.github/workflows/api-test
         with:
           workingDirectory: api
+
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/workflows/web-test
+        with:
+          workingDirectory: web
 
   terraform-plan:
     name: 📐 Terraform Plan
@@ -38,7 +44,7 @@ jobs:
   terraform-apply:
     name: 🏗️ Deploy Infrastructure
     runs-on: ubuntu-latest
-    needs: [unit-tests, terraform-plan]
+    needs: [tests, terraform-plan]
     environment: dev
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
