--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -16,9 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
-        uses: ./.github/actions/test
+        uses: ./.github/workflows/api-test
         with:
           workingDirectory: api
+
+      - uses: actions/checkout@v3
+      - name: Run Tests
+        uses: ./.github/workflows/web-test
+        with:
+          workingDirectory: web
   
   terraform-plan:
     name: Run Terraform Plan
