--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
@@ -18,12 +19,15 @@
     "sharp": "^0.31.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "jest": "^29.4.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.4"
   }
 }
