--- a/web/package.json
+++ b/web/package.json
@@ -1,29 +1,38 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.8",
-    "chart.js": "^4.2.0",
-    "next": "latest",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-aria": "^3.22.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "sharp": "^0.31.3"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix",
+		"prettier": "prettier --write .",
+		"prettier:check": "npx prettier --check ."
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.8",
+		"chart.js": "^4.2.0",
+		"next": "latest",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-aria": "^3.22.0",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.7.1",
+		"sharp": "^0.31.3"
+	},
+	"devDependencies": {
+		"@types/node": "18.11.3",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"autoprefixer": "^10.4.12",
+		"eslint": "8.34.0",
+		"eslint-config-next": "13.1.6",
+		"eslint-config-prettier": "^8.6.0",
+		"postcss": "^8.4.18",
+		"prettier": "^2.8.4",
+		"tailwindcss": "^3.2.4",
+		"typescript": "4.9.4"
+	}
 }
