--- a/.github/workflows/web-test/action.yml
+++ b/.github/workflows/web-test/action.yml
@@ -14,10 +14,16 @@ runs:
     run : yarn install
     working-directory: ${{ inputs.workingDirectory }}
 
-  # - name: Lint
-  #   shell: bash
-  #   run: yarn run lint
-  #   working-directory: ${{ inputs.workingDirectory }}
+  - name: Lint
+    uses: ./.github/actions/lint
+    with:
+      working-directory: ${{ inputs.workingDirectory }}
+      script: yarn
+  
+  - name: Prettier
+    uses: ./.github/actions/prettier
+    with:
+      working-directory: ${{ inputs.workingDirectory }}
 
   # - name: Unit Test
   #   shell: bash
