use the proper inputs

--- a/.github/workflows/api-test/action.yml
+++ b/.github/workflows/api-test/action.yml
@@ -17,7 +17,7 @@ runs:
   - name: Lint
     uses: ./.github/actions/lint
     with:
-      working-directory: ${{ inputs.workingDirectory }}
+      workingDirectory: ${{ inputs.workingDirectory }}
       script: npm run
 
   - name: Unit Test
