--- a/.github/actions/prettier/action.yml
+++ b/.github/actions/prettier/action.yml
@@ -16,5 +16,5 @@ runs:
 
   - name: Prettier
     shell: bash
-    run: yarn pretter:check
+    run: yarn prettier:check
     working-directory: ${{ inputs.workingDirectory }}
