--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@headlessui/react": "^1.7.8",
 		"chart.js": "^4.2.0",
+		"dotenv": "^16.0.3",
+		"google-spreadsheet": "^3.3.0",
 		"next": "latest",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
