--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,6 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.5"
   }
 }
