--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
 		"prettier": "prettier --write .",
-		"prettier:check": "npx prettier --check ."
+		"prettier:check": "npx prettier --check .",
+		"get:data": "node ./data/team-generator.js"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.8",
