--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -9,6 +9,11 @@ jobs:
   get-data:
     name: 📊 Get Data from Spreadsheet
     runs-on: ubuntu-latest
+    env:
+      GOOGLE_SERVICE_ACCOUNT_EMAIL: ${{secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL}}
+      GOOGLE_PRIVATE_KEY: ${{secrets.GOOGLE_PRIVATE_KEY}}
+      SPREADSHEET_ID: ${{secrets.SPREADSHEET_ID}}
+
     steps:
       - uses: actions/checkout@v3
 
