--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -27,16 +27,11 @@ jobs:
         run : yarn get:data
         working-directory: ./web
     
-  commit-to-repo:
-    name: 🛸 Commit to Repo
-    runs-on: ubuntu-latest
-    needs: [get-data]
-    steps:
-      - uses: actions/checkout@v3
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      - name: Run Script
+
+      - name: Commit and Push
         shell: bash
         run: |
           git config user.name "RedPandaBot"
