--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -22,6 +22,11 @@ jobs:
         run : yarn install
         working-directory: ./web
       
+      - name: Update Teams Data
+        shell: bash
+        run: yarn get:data
+        working-directory: .web
+      
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
@@ -33,6 +38,6 @@ jobs:
           git config user.name "RedPandaBot"
           git config user.email "<>"
           git switch -c update-data-${{ steps.date.outputs.date }}
-          git add teams.json
+          git add ./data/teams.json
           git commit -m "update spreadsheet data"
         working-directory: ./web
