--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Update Teams Data
         shell: bash
         run: yarn get:data
-        working-directory: .web
+        working-directory: ./web
       
       - name: Get current date
         id: date
