run pipeline every day at 3am

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,9 +1,8 @@
 name: 📊 Update Stat Data
 
 on:
-  push:
-    branches:
-    - story/google-spreadsheet-pipeline
+  schedule:
+    - 0 0 3 1/1 * ? *
 
 jobs:
   get-data:
