change name of test

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   unit-tests:
-    name: 🧪 Run Unit Tests
+    name: 🧪 Run Tests
     runs-on: ubuntu-latest
     environment: test
     steps:
