--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
