--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.7.8",
     "chart.js": "^4.2.0",
     "lint": "^0.8.19",
+    "linter-bundle": "^2.27.0",
     "next": "latest",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
