--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "test": "jest",
 		"lint:fix": "next lint --fix",
 		"prettier": "prettier --write .",
