--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -8,6 +8,6 @@
 	"rules": {
 		"prefer-const": "error",
 		"@typescript-eslint/no-unused-vars": "error",
-		"@typescript-eslint/no-explicit-any": "off"
+		"@typescript-eslint/no-explicit-any": "error"
 	}
 }
